# LangOrch

./: .gitignore  AGENT_SWARM_INTEGRATION_PROPOSAL.md  AI_PRODUCT_AND_ECOSYSTEM_GAP_PLAN.md  BUILDER_V2_EXECUTION_PLAN.md  BUSINESS_BUILDER_V1_REQUIREMENTS.md  DIFY_COMPARISON_REPORT.md  E2E_TEST_REPORT.md  ENTERPRISE_READINESS_GAP_ANALYSIS.md  FUTURE_PLAN.md  IDENTITY_RBAC_AND_BUILDER_REBUILD_PLAN.md  IMPLEMENTATION_SPEC.md  IMPLEMENTATION_STATUS.md  MULTI_TENANCY_AND_COMPLIANCE_PLAN.md  PRODUCT_ARCHITECTURE_AND_MARKET_WIN_STRATEGY.md  README.md  SWARM_README.md  UNDERSTANDING.md  VISUAL_BUILDER_REBUILD_REFERENCE.md  api_coverage_report.json  package-lock.json  readme-understanding  validate_api_coverage.py
backend/: alembic.ini  langorch.db-shm  langorch.db-wal  openapi_schema.json  openapi_schema_clean.json  pyproject.toml  pytest.ini  requirements.txt  test_db.py  test_out.txt  test_secrets_workflow.json  uvicorn_err.txt  uvicorn_out.txt
backend/alembic/: env.py
backend/alembic/versions/: 194a461733a3_add_orchestratorworker_registry.py  v001_initial_schema.py  v002_runs_indexes.py  v003_agent_pool_id.py  v004_users_secrets.py  v005_cases.py  v006_case_sla.py  v007_case_webhooks.py  v008_case_sla_policies.py  v009_case_webhook_deliveries_indexes.py  v010_procedure_release_governance.py  v011_trigger_dedupe_uniqueness.py  v012_procedure_builder_drafts.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agent_credentials.py  (+18 more)
backend/demo_agents/: README.md  hybrid_agent.py  run_5_web_agents.ps1  run_5_web_agents_split_pools.ps1  run_hybrid_agent.ps1  run_playwright_agent.ps1  run_playwright_visible.ps1  run_swarm_agent.ps1  sample_all_options.ckp.json  swarm_agent.py  web_agent.py
backend/tests/: conftest.py  load_test.py  test_agent_client_schema.py  test_api.py  test_approval_e2e.py  test_approvals_api_atomicity.py  test_audit_events.py  test_auth_deps.py  test_auth_sso_security.py  test_autoscaler_service.py  test_batch10.py  test_batch11.py  test_batch12.py  test_batch13.py  test_batch14.py  test_batch15.py  test_batch16.py  test_batch20.py  test_batch21.py  test_batch22.py  test_batch23.py  test_batch24.py  test_batch25.py  test_batch26.py  test_batch27.py  test_batch29.py  test_batch30_retention.py  test_batch35.py  test_batch35_enterprise.py  test_batch39_event_bus.py  test_batch7.py  test_batch8.py  test_batch9.py  test_binder.py  test_case_queue_web_search.py  test_case_queue_webhook_integration.py  test_case_sla_policies.py  test_case_webhooks.py  test_cases_api.py  test_chaos_and_failure_paths.py  (+27 more)
(+185 files in other folders)
