[project]
name = "langorch"
version = "0.1.0"
description = "LangOrch — CKP-driven durable agentic orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-core>=0.3",
    "sse-starlette>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1", "asyncpg>=0.29"]
sqlserver = ["pyodbc>=5.1"]
webagent = ["playwright>=1.50"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.5"]
